[gd_scene load_steps=2 format=3 uid="uid://dmdajmva7q6u0"]

[ext_resource type="Script" path="res://StartScreen.gd" id="1_ff747"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ff747")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0627451, 0.231373, 0.0705882, 1)

[node name="StartMain" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="StartMain"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.5
offset_top = -29.0
offset_right = 125.5
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "START"

[node name="TutorialButton" type="Button" parent="StartMain"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.5
offset_top = 46.0
offset_right = 125.5
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "TUTORIAL"

[node name="StartTutorial" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackButton" type="Button" parent="StartTutorial"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.5
offset_top = 176.0
offset_right = 125.5
offset_bottom = 234.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "BACK"

[node name="Label" type="Label" parent="StartTutorial"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -223.0
offset_right = 251.0
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
text = "On the eve of Christmas, it is your duty as the Chief Present Inspection Officer (CPIO) to ensure that only gifts destined for deserving children make it on to Santa's sleigh. It is also essential that the gifts are of impeccable quality.

Cross check the labels on the presents with your list of recipients, and confirm if they have been naughty or nice, and press the red or green buttons on your control panel accordingly.


Right click to zoom in and out to read the labels.
Left click on a button to activate it.

Sort all of the presents correctly in time to not ruin Christmas!"
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="StartMain/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="StartMain/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="StartTutorial/BackButton" to="." method="_on_back_button_pressed"]
